not stable version; request to invoices api is missing

--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -1,3 +1,4 @@
+
 <form method="post" data-request="{{__SELF__}}::onSubmit" data-request-files data-request-flash  enctype="multipart/form-data">
 	<input type="hidden" name="_handler" value="onSubmit">
 	{{ form_token() }}
@@ -13,6 +14,7 @@
 				</div>
 
 			</div>
+			<input type="hidden" name="registration_id" value="{{data.id}}">
 			<div class="row">
 				<div class="col-xs">
 					<div class="alert alert-danger" data-validate-error="">
@@ -25,8 +27,8 @@
 					<label for="type"><p>Registration request<span class="required">*</span></p></label>
 					<select id="type" name="type" required>
 						<option value="">-- Choose --</option>
-						<option value="physical" id="physical">Physical attendance</option>
-						<option value="virtual" id="virtial">Online attendance</option>
+						<option value="physical" id="physical" {% if (data.type == "physical") %} selected {% endif %}>Physical attendance</option>
+						<option value="virtual" id="virtual"{% if (data.type == "virtual") %} selected {% endif %}>Online attendance</option>
 					</select>
 				</div>
 
@@ -35,8 +37,8 @@
 				<div class="col-md-4 col-xs-12 field">
 
 					<div class="field">
-						<label for="prefix"><p>Prefix<span class="required">*</span></p></label>
-						<input type="text" id="prefix" name="prefix" value="" required>
+						<label for="prefix"><p>Prefix</p></label>
+						<input type="text" id="prefix" name="prefix" value="{{data.prefix}}">
 					</div>
 				</div>
 			</div>
@@ -45,30 +47,37 @@
 
 					<div class="field">
 						<label for="first_name"><p>First name<span class="required">*</span></p></label>
-						<input type="text" id="first_name" name="first_name" value="" required>
+						<input type="text" id="first_name" name="first_name" value="{{data.first_name}}" required>
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-12 field">
 
 					<div class="field">
 						<label for="middle_name"><p>Middle name</p></label>
-						<input type="text" id="middle_name" name="middle_name" value="">
+						<input type="text" id="middle_name" name="middle_name" value="{{data.middle_name}}">
 					</div>
 				</div>
 				<div class="col-md-4 col-xs-12 field">
 
 					<div class="field">
 						<label for="last_name"><p>Last name<span class="required">*</span></p></label>
-						<input type="text" id="last_name" name="last_name" value="" required>
+						<input type="text" id="last_name" name="last_name" value="{{data.last_name}}" required>
 					</div>
 				</div>
 			</div>
 			<div class="row box">
-				<div class="col-md-4 col-xs-12 field">
+				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
 						<label for="suffix"><p>Suffix (e.g. Jr., PhD, MD, etc.)</p></label>
-						<input type="text" id="suffix" name="suffix" value="">
+						<input type="text" id="suffix" name="suffix" value="{{data.suffix}}">
+					</div>
+				</div>
+				<div class="col-md-6 col-xs-12 field">
+
+					<div class="field">
+						<label for="first_name_tag"><p>Name tag (first and last names)</p></label>
+						<input type="text" id="first_name_tag" name="first_name_tag" value="{{data.first_name_tag}}">
 					</div>
 				</div>
 			</div>
@@ -76,31 +85,15 @@
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="first_name_tag"><p>Name tag - first name</p></label>
-						<input type="text" id="first_name_tag" name="first_name_tag" value="">
+						<label for="last_name_tag"><p>Affiliation</p></label>
+						<input type="text" id="last_name_tag" name="last_name_tag" value="{{data.last_name_tag}}">
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="last_name_tag"><p>Name tag - last name</p></label>
-						<input type="text" id="last_name_tag" name="last_name_tag" value="">
-					</div>
-				</div>
-			</div>
-			<div class="row box">
-				<div class="col-md-6 col-xs-12 field">
-
-					<div class="field">
-						<label for="institution"><p>School / Institution / Company</p></label>
-						<input type="text" id="institution" name="institution" value="">
-					</div>
-				</div>
-				<div class="col-md-6 col-xs-12 field">
-
-					<div class="field">
-						<label for="title"><p>Title</p></label>
-						<input type="text" id="title" name="title" value="">
+						<label for="title"><p>Position</p></label>
+						<input type="text" id="title" name="title" value="{{data.title}}">
 					</div>
 				</div>
 			</div>
@@ -109,14 +102,14 @@
 
 					<div class="field">
 						<label for="email"><p>Email<span class="required">*</span></p></label>
-						<input type="text" id="email" name="email" value="" required>
+						<input type="text" id="email" name="email" value="{{data.email}}" required>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
 						<label for="verify_email"><p>Verify email<span class="required">*</span></p></label>
-						<input type="text" id="verify_email" name="verify_email" value="" required>
+						<input type="text" id="verify_email" name="verify_email" value="{{data.email}}" required>
 					</div>
 				</div>
 			</div>
@@ -125,14 +118,17 @@
 
 					<div class="field">
 						<label for="phone"><p>Phone</p></label>
-						<input type="text" id="phone" name="phone" value="">
+						<input type="text" id="phone" name="phone" value="{{data.phone}}">
 					</div>
 				</div>
-				<div class="col-md-6 col-xs-12 field">
+
+			</div>
+			<div class="row box">
+				<div class="col-md-12 col-xs-12 field">
 
 					<div class="field">
-						<label for="fax"><p>Fax</p></label>
-						<input type="text" id="fax" name="fax" value="">
+						<label for="address"><p>Address line 1<span class="required">*</span></p></label>
+						<input type="text" id="address" name="address" value="{{data.address|striptags}}" required>
 					</div>
 				</div>
 			</div>
@@ -140,8 +136,8 @@
 				<div class="col-md-12 col-xs-12 field">
 
 					<div class="field">
-						<label for="address"><p>Address<span class="required">*</span></p></label>
-						<input type="text" id="address" name="address" value="" required>
+						<label for="address"><p>Address line 2</p></label>
+						<input type="text" id="address2" name="address2" value="{{data.address2}}">
 					</div>
 				</div>
 			</div>
@@ -150,14 +146,14 @@
 
 					<div class="field">
 						<label for="city"><p>City<span class="required">*</span></p></label>
-						<input type="text" id="city" name="city" value="" required>
+						<input type="text" id="city" name="city" value="{{data.city}}" required>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="region"><p>State / Province / Region<span class="required">*</span></p></label>
-						<input type="text" id="region" name="region" value="" required>
+						<label for="region"><p>State / Province / Region</p></label>
+						<input type="text" id="region" name="region" value="{{data.region}}">
 					</div>
 				</div>
 			</div>
@@ -165,17 +161,17 @@
 				<div class="col-md-6 col-xs-12 field">
 					<div class="field">
 						<label for="postal_code"><p>Zip / Postal Code<span class="required">*</span></p></label>
-						<input type="text" id="postal_code" name="postal_code" value="" required>
+						<input type="text" id="postal_code" name="postal_code" value="{{data.postal_code}}" required>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
-					<div class="field">
+					<div class="field" id="country_field">
 						<label for="country"><p>Country<span class="required">*</span></p></label>
 						<select id="country" name="country" required>
 							<option value="">-- Choose country --</option>
 							{% for country in countries %}
-							<option value="{{ country.id }}">{{ country.name }}</option>
+							<option value="{{ country.id }}" {% if (data.country_id == country.id) %} selected {% endif %}>{{ country.name }}</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -186,14 +182,14 @@
 
 					<div class="field">
 						<label for="emergency_contact_name"><p>Emergency contact name<span class="required">*</span></p></label>
-						<input type="text" id="emergency_contact_name" name="emergency_contact_name" value="" required>
+						<input type="text" id="emergency_contact_name" name="emergency_contact_name" value="{{data.emergency_contact_name}}" required>
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
 						<label for="emergency_contact_phone"><p>Emergency contact phone<span class="required">*</span></p></label>
-						<input type="text" id="emergency_contact_phone" name="emergency_contact_phone" value="" required>
+						<input type="text" id="emergency_contact_phone" name="emergency_contact_phone" value="{{data.emergency_contact_phone}}" required>
 					</div>
 				</div>
 			</div>
@@ -202,7 +198,7 @@
 
 					<div class="field">
 						<label for="comments"><p>Comments (use this textbox to specify any concerns, general comments, or special needs (e.g. dietary, disability, etc.)</p></label>
-						<textarea name="comments" id="comments" cols="" rows="12"></textarea>
+						<textarea name="comments" id="comments" cols="" rows="12">{{data.comments}}</textarea>
 						<script>
 							// instance, using default configuration.
 							CKEDITOR.replace( 'comments' );
@@ -217,33 +213,41 @@
 					<select id="discount_options" name="discount_options" required>
 						<option value="">-- Choose --</option>
 						{% for option in discount_options %}
-						<option value="{{ option.id }}" id="ticket_{{ option.id }}">{{ option.name }} - {{ option.amount }} {{ option.currency }}</option>
+						<option value="{{ option.id }}" id="ticket_{{ option.id }}" {% if (data.discount_option_id == option.id) %} selected {% endif %}>{{ option.name }} - {{ option.amount }} {{ option.currency }}</option>
 						{% endfor %}
 					</select>
 
 
 				</div>
 				<div class="col-md-6 col-xs-12 field" id="members_code_field">
-
-					<label for="discount_code"><p>Members code</p></label>
-					<input type="text" id="discount_code" name="discount_code" value="">
+					<label for="discount_code"><p>Members code (case-sensitive)</p></label>
+					<input type="text" id="discount_code" name="discount_code" value="{{data.discount_code}}">
+					<div id="discount_code_success_message" class="discount_code_success_message"></div>
+					<div id="discount_code_err_message" class="discount_code_err_message"></div>
 				</div>
 			</div>
 
 			<div class="row box">
-				<div class="col-md-6 col-xs-12 field" id="members_code_field">
+				<div class="col-md-6 col-xs-12 field" id="accompanying_person_field_container">
 					<label for="accompanying_person"><p>Accompanying person - 120 &euro;</p></label>
 					<!-- Rounded switch -->
 					<label class="switch">
-						<input type="checkbox" name="accompanying_person" value="1">
+						<input type="checkbox" name="accompanying_person" id="accompanying_person_field" value="1" {% if (data.accompanying_person == 1) %} checked {% endif %}>
 						<span class="slider round"></span>
 					</label>
 				</div>
-				<div class="col-md-6 col-xs-12 field" id="discount_options_field">
+				<div class="col-md-6 col-xs-12 field" id="accompanying_person_name_field">
+					<label for="accompanying_person_name"><p>Accompanying person name</p></label>
+					<input type="text" id="accompanying_person_name" name="accompanying_person_name" value="{{data.accompanying_person_name}}">
+				</div>
+			</div>
+
+			<div class="row box">
+				<div class="col-md-12 col-xs-12 field">
 					<label for="help_others"><p>Help others: I want to help by donating funds to be used to help cover registrations for others who need support. - 25 &euro;</p></label>
 					<!-- Rounded switch -->
 					<label class="switch">
-						<input type="checkbox" name="help_others" value="1">
+						<input type="checkbox" name="help_others" value="1" {% if (data.help_others == 1) %} checked {% endif %}>
 						<span class="slider round"></span>
 					</label>
 				</div>
@@ -252,8 +256,8 @@
 			<div class="row box">
 				<div class="col-md-12 col-xs-12 field" id="payment_options_field">
 					<label for="payment_options"><p>Payment options<span class="required">*</span></p></label>
-						<label><input name="payment_options[]" type="radio" value="pay_now" required>Pay now (Payment card, PayPal)</label>
-						<label><input name="payment_options[]" type="radio" value="group_invoice" required>I want this registration to be added to a group invoice and pay later at once</label>
+						<label><input name="payment_options[]" type="radio" value="pay_now" {% if (data.payment_options == "pay_now") %} checked {% endif %} required>Pay now (Bank card, PayPal)</label>
+						<label><input name="payment_options[]" type="radio" value="group_invoice" {% if (data.payment_options == "group_invoice") %} checked {% endif %} required>I need a group invoice (payment due on receipt by Bank card, PayPal)</label>
 				</div>
 			</div>
 			<div id="group_invoice_fields" style="display: none;">
@@ -262,7 +266,7 @@
 
 						<div class="field">
 							<label for="group_members_list"><p>List of people who will register and should be added to the same invoice<span class="required">*</span></p></label>
-							<textarea name="group_members_list" id="group_members_list" cols="" rows="12"></textarea>
+							<textarea name="group_members_list" id="group_members_list" cols="" rows="12">{{data.invoice_group_members}}</textarea>
 							<script>
 								// instance, using default configuration.
 								CKEDITOR.replace( 'group_members_list' );
@@ -276,7 +280,7 @@
 
 						<div class="field">
 							<label for="billing_details"><p>Billing details (company name, VAT number, address, country)<span class="required">*</span></p></label>
-							<textarea name="billing_details" id="billing_details" cols="" rows="12"></textarea>
+							<textarea name="billing_details" id="billing_details" cols="" rows="12">{{data.billing_details}}</textarea>
 							<script>
 								// instance, using default configuration.
 								CKEDITOR.replace( 'billing_details' );
@@ -290,7 +294,7 @@
 
 						<div class="field">
 							<label for="invoice_email"><p>Send invoice to the following email<span class="required">*</span></p></label>
-							<input type="text" id="invoice_email" name="invoice_email" value="">
+							<input type="text" id="invoice_email" name="invoice_email" value="{{data.invoice_email}}">
 						</div>
 					</div>
 				</div>
@@ -307,7 +311,7 @@
 
 					<div class="row center-xs">
 						<div class="col-xs-12 col-md-3">
-							<input type="submit" name="tAction" value="Submit" class="btn btn-primary">
+							<input type="submit" name="tAction" value="Preview" class="btn btn-primary">
 						</div>
 					</div>
 				</div>
