--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -25,7 +25,7 @@
 				</div>
 
 			</div>
-			<input type="hidden" name="registration_id" value="{{data.id}}">
+			<input type="hidden" name="registration_id" value="{{registration_id}}">
 			<div class="row">
 				<div class="col-xs">
 					<div class="alert alert-danger" data-validate-error="">
