--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -185,7 +185,7 @@
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="phone"><p>Phone (include also the counry code)</p></label>
+						<label for="phone"><p>Phone (include also the Country code)</p></label>
 						<input type="text" id="phone" name="phone" value="{{data.phone}}">
 					</div>
 				</div>
@@ -202,7 +202,7 @@
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="emergency_contact_phone"><p>Emergency contact phone (include also the counry code)<span class="required">*</span></p></label>
+						<label for="emergency_contact_phone"><p>Emergency contact phone (include also the Country code)<span class="required">*</span></p></label>
 						<input type="text" id="emergency_contact_phone" name="emergency_contact_phone" value="{{data.emergency_contact_phone}}" required>
 					</div>
 				</div>
@@ -210,28 +210,28 @@
 			<div class="row box">
 				<div class="col-md-6 col-xs-12 field">
 					<div class="field">
-						<label for="slack_email"><p>Preferred email when using Slack or Discord (may not match registration email)</p></label>
+						<label for="slack_email"><p>Preferred email when using Slack or Discord (may not match the registration email)</p></label>
 						<input type="text" id="slack_email" name="slack_email" value="{{data.slack_email}}">
 					</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field">
 
 					<div class="field">
-						<label for="twitter"><p>My twitter handle <br> &nbsp; </p></label>
+						<label for="twitter"><p>My Twitter handle <br> &nbsp; </p></label>
 						<input type="text" id="twitter" name="twitter" value="{{data.twitter}}">
 					</div>
 				</div>
 			</div>
 
-			<div class="row box">
+			<div class="row box" id="comments">
 				<div class="col-md-12 col-xs-12 field">
 
 					<div class="field">
-						<label for="comments"><p>Comments (use this textbox to specify any concerns, general comments, or special needs (e.g. dietary, disability, etc.)</p></label>
-						<textarea name="comments" id="comments" cols="" rows="12">{{data.comments}}</textarea>
+						<label for="comments"><p>Comments (use this textbox to specify any concerns, general comments, or special needs, e.g. dietary, disability, etc.)</p></label>
+						<textarea name="comments" id="comments_textarea" cols="" rows="12">{{data.comments}}</textarea>
 						<script>
 							// instance, using default configuration.
-							CKEDITOR.replace( 'comments' );
+							CKEDITOR.replace( 'comments_textarea' );
 
 						</script>
 					</div>
@@ -249,7 +249,7 @@
 					<div id="ticket_type_message" class="ticket_type_message">Early Registration Discount <b>-50 &euro;</b> will be applied</div>
 				</div>
 				<div class="col-md-6 col-xs-12 field" id="members_code_field">
-					<label for="discount_code"><p>Members code (case-sensitive)</p></label>
+					<label for="discount_code"><p>Member discount code (case-sensitive)</p></label>
 					<input type="text" id="discount_code" name="discount_code" value="{{data.discount_code}}">
 					<div id="discount_code_success_message" class="discount_code_success_message"></div>
 					<div id="discount_code_err_message" class="discount_code_err_message"></div>
@@ -258,7 +258,7 @@
 
 			<div class="row box">
 				<div class="col-md-6 col-xs-12 field" id="accompanying_person_field_container">
-					<label for="accompanying_person"><p>Accompanying person - 135 &euro;</p></label>
+					<label for="accompanying_person"><p>Accompanying person's name - 135 &euro;</p></label>
 					<!-- Rounded switch -->
 					<label class="switch">
 						<input type="checkbox" name="accompanying_person" id="accompanying_person_field" value="1" {% if (data.accompanying_person == 1) %} checked {% endif %}>
@@ -280,7 +280,7 @@
 
 			<div class="row box">
 				<div class="col-md-12 col-xs-12 field">
-					<label for="help_others"><p>Help others: I want to donate funds for those who need support for registration. - 25 &euro;</p></label>
+					<label for="help_others"><p>Help others: I want to donate funds for those who need support for registration - 25 &euro;</p></label>
 					<!-- Rounded switch -->
 					<label class="switch">
 						<input type="checkbox" name="help_others" value="1" id="help_others_field" {% if (data.help_others == 1) %} checked {% endif %}>
@@ -307,29 +307,29 @@
 				</div>
 			</div>
 			<div id="group_invoice_fields" style="display: none;">
-				<div class="row box">
+				<div class="row box" id="group_members_list">
 					<div class="col-md-12 col-xs-12 field">
 
 						<div class="field">
 							<label for="group_members_list"><p>For group invoice: List of people who will register and should be added to the same invoice; For extra invoice: provide more details<span class="required">*</span></p></label>
-							<textarea name="group_members_list" id="group_members_list" cols="" rows="12">{{data.invoice_group_members}}</textarea>
+							<textarea name="group_members_list" id="group_members_list_textarea" cols="" rows="12">{{data.invoice_group_members}}</textarea>
 							<script>
 								// instance, using default configuration.
-								CKEDITOR.replace( 'group_members_list' );
+								CKEDITOR.replace( 'group_members_list_textarea' );
 
 							</script>
 						</div>
 					</div>
 				</div>
-				<div class="row box">
+				<div class="row box" id="billing_details">
 					<div class="col-md-12 col-xs-12 field">
 
 						<div class="field">
 							<label for="billing_details"><p>Billing details for the group or extra invoice [company name, address, country, VAT number (if applicable)]<span class="required">*</span></p></label>
-							<textarea name="billing_details" id="billing_details" cols="" rows="12">{{data.billing_details}}</textarea>
+							<textarea name="billing_details" id="billing_details_textarea" cols="" rows="12">{{data.billing_details}}</textarea>
 							<script>
 								// instance, using default configuration.
-								CKEDITOR.replace( 'billing_details' );
+								CKEDITOR.replace( 'billing_details_textarea' );
 
 							</script>
 						</div>
@@ -374,6 +374,17 @@
 						</div>
 					</div>
 
+					<div class="row box">
+						<div class="col-md-12 col-xs-12 field">
+							<label for="checkbox_received"><p><input type="checkbox" name="checkbox_received" value="1" id="checkbox_received" {% if (data.checkbox_received == 1) %} checked {% endif %}> I have received and understood the privacy information and have thus been informed about my rights as a data subject. I will not deduce any rights from this consent (e.g. a fee). I can withdraw my consent at any time.</p></label>
+						</div>
+					</div>
+					<div class="row box">
+						<div class="col-md-12 col-xs-12 field">
+							<label for="checkbox_declare"><p><input type="checkbox" name="checkbox_declare" value="1" id="checkbox_declare" {% if (data.checkbox_declare == 1) %} checked {% endif %}> I hereby declare that I freely give my explicit consent, that the data collected about me during the registration will be passed to TDWG and Pensoft Publishers for the purpose of organizing the conference.</p></label>
+						</div>
+					</div>
+
 
 					<div class="row box">
 						<div class="col-md-12 col-xs-12 field">
@@ -407,12 +418,12 @@
 					</div>
 					<div class="row box">
 						<div class="col-md-12 col-xs-12 field">
-							<label for="checkbox_optional_open_session"><p><input type="checkbox" name="checkbox_optional_open_session" value="1" id="checkbox_optional_open_session" {% if (data.checkbox_optional_open_session == 1) %} checked {% endif %}> I'm willing to chair /  moderate a general open session at TDWG2022</p></label>
+							<label for="checkbox_optional_open_session"><p><input type="checkbox" name="checkbox_optional_open_session" value="1" id="checkbox_optional_open_session" {% if (data.checkbox_optional_open_session == 1) %} checked {% endif %}> I'm willing to chair /  moderate a general open session at TDWG2022.</p></label>
 						</div>
 					</div>
 					<div class="row box">
 						<div class="col-md-12 col-xs-12 field">
-							<label for="checkbox_optional_agree_shared"><p><input type="checkbox" name="checkbox_optional_agree_shared" value="1" id="checkbox_optional_agree_shared" {% if (data.checkbox_optional_agree_shared == 1) %} checked {% endif %}> I agree for my name, affiliation, and email to be shared after the conference with other attendees</p></label>
+							<label for="checkbox_optional_agree_shared"><p><input type="checkbox" name="checkbox_optional_agree_shared" value="1" id="checkbox_optional_agree_shared" {% if (data.checkbox_optional_agree_shared == 1) %} checked {% endif %}> I agree for my name, affiliation, and email to be shared after the conference with other attendees.</p></label>
 						</div>
 					</div>
 				</div>
