--- a/components/form/default.htm
+++ b/components/form/default.htm
@@ -356,7 +356,7 @@
 
 					<div class="row box">
 						<div class="col-md-12 col-xs-12 field">
-							<label for="checkbox_presenting"><p><input type="checkbox" name="checkbox_presenting" value="1" id="checkbox_presenting" {% if (data.checkbox_presenting == 1) %} checked {% endif %}> If I am presenting or participating in the conference, I understand the meetings and presentations will be recorded and posted at a future date on the public TDWG YouTube channel.<span class="required">*</span></p></label>
+							<label for="checkbox_presenting"><p><input type="checkbox" name="checkbox_presenting" value="1" id="checkbox_presenting" {% if (data.checkbox_presenting == 1) %} checked {% endif %}> If I am presenting or participating in the conference, I understand the meetings and presentations will be recorded and posted at a future date on the public TDWG YouTube, Twitter and other social media channels.<span class="required">*</span></p></label>
 						</div>
 					</div>
 
